--- a/api_rest.html
+++ b/api_rest.html
@@ -147,7 +147,7 @@
 
 <!-- SCRIPT FOR SELECT (custom-select) -->
 <script>
-var host = 'http://0.0.0.0/'
+var host = "PUT YOUR API"
 </script>
 <script src="js/my-select.js" type="text/javascript"></script>
 <!-- SCRIPT FOR DATATABLE (ag-grid) -->
